--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <section>
             <h2><i class="fas fa-project-diagram"></i> Proyecto Personal</h2>
-            <p><a href="https://portafolio-nu-ochre.vercel.app/" target="_blank">Portafolio</a></p>
+            <p><a href="https://mi-portafolio-wheat-seven.vercel.app/" target="_blank">Portafolio</a></p>
             <p><a href="https://pagina-web-shoes-better-fqiz.vercel.app/" target="_blank">Ecommerce de venta de zapatos</a></p>
         </section>
     </main>
